# capmaster

./: .gitignore  2hops  3TUPLE_MATCHING_IMPLEMENTATION.md  AGENTS.md  AGENTS.md.bak_1016  AGENTS.md.bak_1031  ANALYZE_PCAP_GUIDE.md  ARRAY_TO_TEXT_MIGRATION_GUIDE.md  BEST_PRACTICES_CHECKLIST.md  CARDINALITY_ENHANCEMENT.md  CHANGELOG.md  CHANGELOG_ABSOLUTE_ISN.md  CHANGELOG_MARKDOWN_FORMAT.md  CHANGELOG_MATCH_COMPARE.md  CHANGELOG_META_JSON.md  CHANGELOG_SILENT_MODE.md  CHANGELOG_TIMESTAMP_IMPROVEMENT.md  CHANGES_SUMMARY.md  CHANGE_SUMMARY.md  DATABASE_CLEANUP_SUMMARY.md  DATABASE_INTEGRATION_SUMMARY.md  DESIGN_TIME_OVERLAP_MATCHING.md  DIRECTION_INDEPENDENT_MATCHING.md  DOCUMENTATION_UPDATE_SUMMARY.md  DUAL_FILE_INPUT_IMPLEMENTATION.md  DUAL_OUTPUT_UPDATE.md  ENHANCEMENT_SUMMARY.md  FEATURE_COMPLETE_SUMMARY.md  FINAL_ANALYSIS_REPORT.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FLOW_HASH_ANALYSIS_SUMMARY.md  FLOW_HASH_COMPATIBILITY_NOTE.md  FLOW_HASH_ENHANCEMENT.md  FLOW_HASH_FINAL_REPORT.md  FLOW_HASH_IMPLEMENTATION.md  FLOW_HASH_IMPROVEMENTS_SUMMARY.md  FLOW_HASH_INTEGRATION_SUMMARY.md  FLOW_HASH_MISMATCH_ANALYSIS.md  FLOW_HASH_RUST_COMPATIBILITY.md  (+140 more)
artifacts/: README.md
capmaster/: __main__.py  cli.py
data/: README.md
docs/: ABSOLUTE_ISN_CHANGE.md  ACK_LOST_SEGMENT_FEATURE.md  AI_PLUGIN_EXTENSION_GUIDE.md  ANALYZE_BATCH_REFACTOR.md  BEHAVIORAL_PRECISION_ANALYSIS.md  BINARY_PACKAGING_PLAN.md  BUG_REPORT_IPID_DIRECTION.md  COMPARATIVE_ANALYSIS_GUIDE.md  COMPARE_MATCH_REFACTORING.md  COMPARE_PLUGIN_REVIEW.md  COMPARE_TO_COMPARATIVE_MIGRATION.md  COMPREHENSIVE_TEST_REPORT.md  DESIGN_preprocess_and_config.md  F5_MATCHING_GUIDE.md  FLOW_HASH_FEATURE.md  IPID_MATCHING_REDESIGN.md  MARKDOWN_FORMAT_OPTIMIZATION.md  MATCHING_STRATEGIES_COMPARISON.md  MATCH_COMPARE_CODE_SHARING.md  MATCH_COMPARE_CONSISTENCY.md  MATCH_LOGIC_COMPLETE.md  MATCH_OPTIMIZATION_REPORT.md  MATCH_PLUGIN_OPTIMIZATION_IMPLEMENTATION.md  MATCH_PLUGIN_PERFORMANCE_SUMMARY.md  MATCH_STRATEGY.md  MERGE_BY_5TUPLE_FIX.md  META_JSON_OUTPUT.md  MODULE_SELECTION_FEATURE.md  NET_AREA_LOGIC_SIMPLIFICATION.md  OPTIMIZATION_EXECUTIVE_SUMMARY.md  OUTPUT_FORMAT_OPTIMIZATION.md  PERFORMANCE_REPORT.md  PROJECT_SPEC.md  PROTOCOL_COVERAGE_REPORT.md  QUICK_REFERENCE.md  QUICK_REFERENCE_MATCH_COMPARE.md  README.md  SAMPLING_QUICK_REFERENCE.md  SAMPLING_STRATEGY_CHANGE.md  STABLE_SORTING_IMPROVEMENT.md  (+10 more)
examples/: batch_compare_silent.py  (+9 more)
(+318 files in other folders)
